@@ -1,2 +1,3 @@
 select_workspace_title=Select a Workspace
 select_workspace_button=Open Selected Workspace
+select_workspace_no_open_workspaces=You have no workspaces. Create a new one by clicking "Create Workspace".
